[gd_scene load_steps=10 format=2]

[ext_resource path="res://CommonScenes/PromptLegends/BaseLegend.tscn" type="PackedScene" id=1]
[ext_resource path="res://CommonScenes/JoypadSupport/Prompts/PromptInputAction.tscn" type="PackedScene" id=2]
[ext_resource path="res://CommonScenes/JoypadSupport/Prompts/Switch/Switch_Right_Stick.png" type="Texture" id=3]
[ext_resource path="res://CommonScenes/JoypadSupport/Prompts/Switch/Switch_Left_Stick.png" type="Texture" id=4]
[ext_resource path="res://CommonScenes/JoypadSupport/Prompts/PS4/PS4_Left_Stick.png" type="Texture" id=5]
[ext_resource path="res://CommonScenes/JoypadSupport/Prompts/Xbox One/XboxOne_Right_Stick.png" type="Texture" id=6]
[ext_resource path="res://CommonScenes/JoypadSupport/Prompts/PS4/PS4_Right_Stick.png" type="Texture" id=7]
[ext_resource path="res://CommonScenes/JoypadSupport/Prompts/Xbox One/XboxOne_Left_Stick.png" type="Texture" id=8]
[ext_resource path="res://CommonScenes/PromptLegends/ColorPickerLegendContainer.gd" type="Script" id=9]

[node name="LegendColorPicker" instance=ExtResource( 1 )]

[node name="LegendContainer" parent="RootControl" index="1"]
script = ExtResource( 9 )

[node name="JoypadSaturationValue" type="HBoxContainer" parent="RootControl/LegendContainer" index="0"]
margin_left = 62.0
margin_right = 142.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="LeftStickTexture" type="TextureRect" parent="RootControl/LegendContainer/JoypadSaturationValue" index="0"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="ResourcePreloader" type="ResourcePreloader" parent="RootControl/LegendContainer/JoypadSaturationValue/LeftStickTexture" index="0"]
resources = [ PoolStringArray( "1", "2", "3", "4" ), [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ) ] ]

[node name="keyboardSaturationValue" type="HBoxContainer" parent="RootControl/LegendContainer" index="1"]
margin_left = 172.0
margin_right = 492.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="PromptInputAction2" parent="RootControl/LegendContainer/keyboardSaturationValue" index="0" instance=ExtResource( 2 )]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
input_action = "color_value_up"
force_type = 1

[node name="PromptInputAction3" parent="RootControl/LegendContainer/keyboardSaturationValue" index="1" instance=ExtResource( 2 )]
margin_left = 80.0
margin_right = 160.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
input_action = "color_saturation_down"
force_type = 1

[node name="PromptInputAction4" parent="RootControl/LegendContainer/keyboardSaturationValue" index="2" instance=ExtResource( 2 )]
margin_left = 160.0
margin_right = 240.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
input_action = "color_value_down"
force_type = 1

[node name="PromptInputAction" parent="RootControl/LegendContainer/keyboardSaturationValue" index="3" instance=ExtResource( 2 )]
margin_left = 240.0
margin_right = 320.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
input_action = "color_saturation_up"
force_type = 1

[node name="SaturationValue" type="Label" parent="RootControl/LegendContainer" index="2"]
margin_left = 522.0
margin_top = 12.0
margin_right = 981.0
margin_bottom = 68.0
text = "Saturation / Value"

[node name="JoypadHue" type="HBoxContainer" parent="RootControl/LegendContainer" index="3"]
margin_left = 1011.0
margin_right = 1091.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="RightStickTexture" type="TextureRect" parent="RootControl/LegendContainer/JoypadHue" index="0"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="ResourcePreloader" type="ResourcePreloader" parent="RootControl/LegendContainer/JoypadHue/RightStickTexture" index="0"]
resources = [ PoolStringArray( "1", "2", "3", "4" ), [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ) ] ]

[node name="KeyboardHue" type="HBoxContainer" parent="RootControl/LegendContainer" index="4"]
margin_left = 1121.0
margin_right = 1281.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="PromptInputAction" parent="RootControl/LegendContainer/KeyboardHue" index="0" instance=ExtResource( 2 )]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
input_action = "color_hue_up"
force_type = 1

[node name="PromptInputAction2" parent="RootControl/LegendContainer/KeyboardHue" index="1" instance=ExtResource( 2 )]
margin_left = 80.0
margin_right = 160.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
input_action = "color_hue_down"
force_type = 1

[node name="Hue" type="Label" parent="RootControl/LegendContainer" index="5"]
margin_left = 1311.0
margin_top = 12.0
margin_right = 1410.0
margin_bottom = 68.0
text = "Hue"

[node name="PromptsClose" type="HBoxContainer" parent="RootControl/LegendContainer" index="6"]
margin_left = 1440.0
margin_right = 1623.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="Accept" parent="RootControl/LegendContainer/PromptsClose" index="0" instance=ExtResource( 2 )]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
input_action = "ui_accept"

[node name="Close2" type="Label" parent="RootControl/LegendContainer/PromptsClose" index="1"]
margin_left = 80.0
margin_top = 12.0
margin_right = 103.0
margin_bottom = 68.0
text = "/"

[node name="Cancel" parent="RootControl/LegendContainer/PromptsClose" index="2" instance=ExtResource( 2 )]
margin_left = 103.0
margin_right = 183.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
input_action = "ui_cancel"

[node name="Close" type="Label" parent="RootControl/LegendContainer" index="7"]
margin_left = 1653.0
margin_top = 12.0
margin_right = 1796.0
margin_bottom = 68.0
text = "Close"
